deploy/my-app-base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
          image: dmitriy2028/app-test
          ports:
            - containerPort: 3001
