deploy/my-app-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: staging
spec:
  selector:
    app: app
  ports:
    - port: 3001
      targetPort: 3001
