deploy/my-app-base/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - dmitriy2028.site
    secretName: my-cert-secret
  rules:
  - host: test.dmitriy2028.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-deployment
            port:
              number: 3001
